serveup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: serveup-ingress
  namespace: serveup-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules:
  - host: serveup.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serveup-service
            port:
              number: 80
